# 42sh

./: .clang-format  .gitignore  .gitlab-ci.yml  Makefile  meson.build  meson_options.txt  pharaoh  readme.md
math-lexer/src/ast/: ast.c
math-lexer/src/eval/: ast_print.c  rpn_print.c  token_printer.c
math-lexer/src/lexer/: lexer.c  lexer.h  token.c  token.h
my-redir/: my_redir.c
mypipe/: Makefile  mypipe.c
src/: 42sh.c  exec_ast.c  meson.build  options.c  options.h  pretty_print.c  print_pretoken.c  print_token.c  runtime.c  runtime.h
src/builtins/: bracket.c  break.c  builtins.c  builtins.h  cd.c  continue.c  echo.c  exit.c  export.c  meson.build  read.c  unset.c
src/expansion/: expansion.c  expansion.h  meson.build
src/hash_map/: dump.c  hash_map.c  hash_map.h  meson.build
src/hash_map_function/: hash.c  hash_map_function.c  hash_map_function.h  meson.build
src/io/: cstream.h  cstream_readline.c  cstream_string.c
src/lexer/: lexer.c  lexer.h  meson.build  operators.h  rw.h  token.c  token.h
src/main/: exec_ast.c  meson.build  pretty_print.c  print_pretoken.c  print_token.c
src/parser/: ast_cmd_list_node.c  ast_cmd_list_node.h  ast_if_node.c  ast_if_node.h  ast_node.c  ast_node.h  ast_simple_cmd_node.c  ast_simple_cmd_node.h  meson.build  parser.c  parser.h
src/parser/and_or/: ast_and_or.c  ast_and_or.h  meson.build  rule_and_or.c  rule_and_or.h
src/parser/case/: ast_case.c  ast_case.h  meson.build  rules_case.c  rules_case.h
src/parser/cmd_list/: ast_cmd_list.c  ast_cmd_list.h  meson.build  rules_cmd_list.c  rules_cmd_list.h
src/parser/declaration_variable/: ast_dv.c  ast_dv.h  meson.build  rules_dv.c  rules_dv.h
src/parser/for/: ast_for.c  ast_for.h  meson.build  rules_for.c  rules_for.h
src/parser/function/: ast_function.c  ast_function.h  meson.build  rule_function.c  rule_function.h
src/parser/if/: ast_if.c  ast_if.h  meson.build  rules_if.c  rules_if.h
src/parser/negation/: ast_negation.c  ast_negation.h  meson.build
src/parser/operators/: ast_operator.c  ast_operator.h  meson.build  rule_operator.c  rule_operator.h
src/parser/pipeline/: ast_pipeline.c  ast_pipeline.h  meson.build  rule_pipeline.c  rule_pipeline.h
src/parser/redir/: ast_redir.c  ast_redir.h  meson.build  redir_fd.c  redir_fd.h  rules_redir.c  rules_redir.h
src/parser/simple_cmd/: ast_simple_cmd.c  ast_simple_cmd.h  meson.build  rules_simple_cmd.c  rules_simple_cmd.h
src/parser/subshell/: ast_subshell.c  ast_subshell.h  meson.build
src/parser/while/: ast_while.c  ast_while.h  meson.build  rules_while.c  rules_while.h
src/parser/while_until/: ast_while_until.c  ast_while_until.h  meson.build  rules_while_until.c  rules_while_until.h
src/prelexer/: meson.build  prelexer.c  prelexer.h  pretoken.c  pretoken.h
src/stack_function/: meson.build  stack.c  stack.h
src/utils/: meson.build  my_itoa.c  my_itoa.h  vec.c
src/var_expansion/: meson.build  var_expansion.c  var_expansion.h
src/vector/: meson.build  vector.c  vector.h
tests/functional/: adrien_tests.yml  lucas_tests.yml  margaux_tests.yml  pierre_tests.yml
tests/units/: meson.build  tests_lexer.c  tests_none.c
(+37 files in other folders)
