subdir('utils')
subdir('io')
subdir('lexer')
subdir('prelexer')
subdir('parser')
subdir('vector')
subdir('builtins')

main_sources += files('42sh.c')
print_pretoken_main += files('print_pretoken.c')
print_token_main += files('print_token.c')
pretty_print_main += files('pretty_print.c')
exec_ast_main += files('exec_ast.c')
